fix(super-table): align checkboxes and header

--- a/src/JhipsterSampleApplication/ClientApp/src/app/entities/birthday/list/birthday.component.scss
+++ b/src/JhipsterSampleApplication/ClientApp/src/app/entities/birthday/list/birthday.component.scss
@@ -77,7 +77,7 @@
     min-height: 16px !important;
     max-height: 16px !important;
     position: relative !important;
-    top: -3px !important;
+    top: 0 !important;
   }
   ::ng-deep .p-checkbox .p-checkbox-box {
     width: 16px !important;
